--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ style="padding:15px 30px; font-size:20px; border:none; border-radius:20px; backg
 🎁 Click!!!
 </button>
 
-<img class="cake" src="C:\Users\sowmi\Downloads\A\b1.jpeg" alt="Birthday Cake">
+<img class="cake" src="b1.jpeg" alt="Birthday Cake">
 
 
 <img class="balloon" style="left:10%; animation-duration:7s;" src="https://cdn-icons-png.flaticon.com/512/854/854878.png">
@@ -114,3 +114,4 @@ for (let i = 0; i < 150; i++) {
 </script>
 
 </html>
+
